# osu-route

./: .gitignore  LICENSE  README.md  config.json.example  go.mod  go.sum  install.reg  main.go  osu-route.py  osuroute.go  pyproject.toml  uninstall.reg
cmd/osuroute/: cli.go
osuroute/: cli.py
