[tool.poetry]
name = "osu-route"
version = "0.1.0"
description = "budget osu!direct"
authors = ["faith <jamienibtong@gmail.com>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
PySide6 = "^6.0.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
