[tool.poetry]
name = "osuroute"
version = "0.1.0"
description = "budget osu!direct"
authors = ["faith <jamienibtong@gmail.com>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
requests = "^2.25.1"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
osuroute = "osuroute.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
